# webreg_scraper

./: .gitignore  MODIFICATIONS.md
crates/webreg/: Cargo.toml
crates/webreg/src/: main.rs  types.rs
crates/webreg/src/db/: mod.rs  types.rs
crates/webreg/src/degree_audit/: cache.rs  client.rs  config.rs  error.rs  job.rs  mod.rs  processor.rs  types.rs
crates/webreg/src/scraper/: tracker.rs
crates/webreg/src/server/: mod.rs
crates/webreg/src/server/endpoints/: degree_audit.rs  mod.rs  schedule.rs
requirements_config/colleges/: marshall.json  revelle.json  warren.json
requirements_config/majors/: ma30.json
scripts/webregautoin/: package-lock.json  package.json  tsconfig.json
scripts/webregautoin/src/: fns.ts  index.ts
sql/: init_schedules.sql
