[package]
name = "webreg"
version = "0.5.1"
authors = ["Edward Wang"]
edition = "2021"
description = "A scraper and API for UC San Diego's WebReg enrollment system."
repository = "https://github.com/ewang2002/webreg_scraper"

[dependencies]
anyhow = "1.0"
axum = "0.7"
chrono = "0.4"
dashmap = "6.0"
futures = "0.3"
rand = "0.8"
regex = "1.10"
reqwest = { version = "0.12", features = ["cookies", "json"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
scraper = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
webweg = { version = "0.9", features = ["multi"] }
basicauth = { path = "../basicauth", optional = true }
[dev-dependencies]
axum-macros = "0.4"

[features]
default = []
auth = ["dep:basicauth"]